[HY-81] First pass at updating hyte-runtime to Apache Karaf v4.2.5